# soulslikeGL

./: CMakeLists.txt  glad.c  init.h  main.cpp
common/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/: Controller.cpp  Controller.h  DataBus.cpp  DataBus.h
images/: stb_image.h
init/glfw/: init.cpp  init.h
objects/: cube.h  square.h
objects/camera/: Camera.cpp  Camera.h
render/gl/: SceneRenderer.cpp  SceneRenderer.h  app.cpp  app.h
render/gl/common/: Object.cpp  Object.h  Texture.cpp
render/glfw/: SceneRenderer.cpp  SceneRenderer.h  app.cpp  app.h  init.cpp  init.h
settings/: config.h  controls.h  worldConfig.h
shaders/: grad.frag  shader.frag  shader.vert  shaderSelected.frag  uniform.frag
utils/: filesystem_helper.cpp  filesystem_helper.h
world/: Camera.cpp  Camera.h  Object.cpp  Object.h  ObjectGeometry.cpp  ObjectGeometry.h  ObjectV2.cpp  ObjectV2.h  Scene.cpp  Scene.h  SceneV2.cpp  SceneV2.h  WorldObject.cpp  WorldObject.h
world/abilities/: Ability.cpp  Ability.h  FreeMove.cpp  FreeMove.h  FreeRotate.cpp  FreeRotate.h  Move.cpp  Move.h
world/animations/: SmoothMover.cpp  SmoothMover.h
world/behaviours/: FreeMove.cpp  FreeMove.h  FreeRotate.cpp  FreeRotate.h  Move.cpp  Move.h
world/controls/: Controls.cpp  Controls.h
